<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgResource"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintWidth_percent="0.9"
        android:src="?attr/colorSecondary"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/input_image" />

    <Button
        android:id="@+id/btnRetake"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/retake"
        android:textColor="#AA00FF"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRead"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRead"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/read"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnRetake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRetake"
        app:layout_constraintTop_toTopOf="@+id/btnRetake"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cameraContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewViewFinder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:scaleType="fillCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/btnCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_capture"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/capture_image" />

        <ImageView
            android:id="@+id/btnFlash"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_flash"
            app:layout_constraintTop_toTopOf="@id/btnCapture"
            app:layout_constraintBottom_toBottomOf="@id/btnCapture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCapture"
            android:contentDescription="@string/control_flash" />

        <ImageView
            android:id="@+id/btnAlbum"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_insert_photo"
            app:layout_constraintTop_toTopOf="@id/btnCapture"
            app:layout_constraintBottom_toBottomOf="@id/btnCapture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCapture"
            android:contentDescription="@string/select_from_photo_album" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>