<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="335dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_item_list"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/imgPopupIllustration"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/illustration"
        android:src="@drawable/ic_baseline_setting"
        app:layout_constraintBottom_toTopOf="@id/lblTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTitle"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|top"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="8sp"
        android:text="@string/permission_require"
        app:layout_constraintBottom_toTopOf="@id/lblDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPopupIllustration" />

    <TextView
        android:id="@+id/lblDesc"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|top"
        android:letterSpacing="0.01"
        android:text="@string/permission_body"
        app:layout_constraintBottom_toTopOf="@id/btnOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTitle" />

    <Button
        android:id="@+id/btnOk"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="true"
        android:text="@string/ok"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>